tests/build/cases/widget_new/malformed_fields2.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
 --> cases/widget_new/malformed_fields2.rs:7:13
  |
5 |       let _ = Wgt! {
  |  _____________-
6 | |         margin = {
7 | |             margin:
  | |             ^^^^^^
8 | |         };
9 | |     };
  | |_____- an argument is missing
  |
note: associated function defined here
 --> $WORKSPACE/zero-ui/src/properties/layout.rs
  |
  | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
  |                                   ^^^^^^
help: provide the argument
  --> $WORKSPACE/zero-ui/src/widgets.rs
   |
   | margin(/* margin */)
   |
